Include "choosing a release channel" link to "more info"

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -145,7 +145,10 @@
                 </li>
                 <li>
                   <a id="release-notes-link" class="small-link dotted" href="{{ thunderbird_url('releasenotes', default_channel) }}">{{ _('Release Notes') }}</a>
-                  </li>
+                </li>
+                <li>
+                  <a class="small-link dotted" href="{{ url('download.desktop.choosing-release-channel') }}">{{ _('Choosing a Release Channel') }}</a>
+                </li>
               </ul>
             </div>
           </div>
