Updates form/UTM data for Dec25-2 appeal

--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2c/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2c/donate/index.html
@@ -9,7 +9,7 @@
 
 {# For donation url generation #}
 {% set fru_form_id = 'dec25-2' %}
-{% set utm_content = 'cta_c' %}
+{% set utm_content = 'dec25-2c' %}
 {% set utm_campaign = 'dec25_appeal-2' %}
 {% set donation_base_url = None %}
 {# We want to show the redirect notice here as this is where the modal will actually open up. #}
