--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2c/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2c/index.html
@@ -11,7 +11,7 @@
 
 {# For donation url generation #}
 {% set fru_form_id = fru_form_id|default('dec25-2') %}
-{% set utm_content = utm_content|default('cta_c') %}
+{% set utm_content = utm_content|default('dec25-2c') %}
 {% set utm_campaign = utm_campaign|default('dec25_appeal-2') %}
 {% set utm_source = utm_source|default('in_app') %}
 {% set donation_base_url = donation_base_url|default(url('updates.140.appeal.dec25-2c.donate')) %}
