Dec25-2 appeal: uppercase title, tweak button styles

--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2a/index.html
@@ -28,7 +28,7 @@
 
 {% block content %}
   <section id="appeal-body">
-    <h1 id="appeal-heading" class="with-lowercase" aria-label="{{ _('Thunderbird Needs You') }}">
+    <h1 id="appeal-heading" aria-label="{{ _('Thunderbird Needs You') }}">
       {{ _('Thunderbird <span>Needs You</span>') }}
     </h1>
 
