--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2b/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-2b/index.html
@@ -28,7 +28,7 @@
 
 {% block content %}
   <section id="appeal-body">
-    <h1 id="appeal-heading" class="with-lowercase" aria-label="{{ _('Only 3% of users support Thunderbird') }}">
+    <h1 id="appeal-heading" aria-label="{{ _('Only 3% of users support Thunderbird') }}">
       {{ _('Only 3% of users <span>SUPPORT THUNDERBIRD</span>') }}
     </h1>
 
