Fixup heading punctuation

--- a/sites/tb.pro/thundermail/index.html
+++ b/sites/tb.pro/thundermail/index.html
@@ -15,7 +15,7 @@
 {% block masthead %}
 <div class="product-logo"></div>
 
-<h1>{{ _('Host Securely. Mail Confidently') }}</h1>
+<h1>{{ _('Host Securely. Mail Confidently.') }}</h1>
 <p>
   {{ _('Thundermail offers you email hosting with the same values as Thunderbird. Enjoy privacy, security, and freedom from client to inbox.') }}
 </p>
