--- a/sites/tb.pro/waitlist/index.html
+++ b/sites/tb.pro/waitlist/index.html
@@ -5,7 +5,8 @@
 {% extends "includes/base/page.html" %}
 {% from 'includes/macros/right-arrow-submit-button.html' import right_arrow_submit_button %}
 
-{% block page %}{{ _('Join the Waitlist') }}{% endblock %}
+{% block page_title %}{{ _('Join the Waitlist') }}{% endblock %}
+{% block page_desc %}{{ _('Join the waitlist to get early access to Thunderbird Pro Early Bird.') }}{% endblock %}
 
 {% block extra_css %}
 <link href="{{ static('css/waitlist.css') }}" rel="stylesheet" type="text/css" />
