Change name of JS bundle

--- a/sites/tb.pro/waitlist/index.html
+++ b/sites/tb.pro/waitlist/index.html
@@ -73,7 +73,7 @@
 
 
 {% block extra_js %}
-<script src="{{ static('js/common-bundle.js') }}"></script>
+<script src="{{ static('js/wait-list-bundle.js') }}"></script>
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
